--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   <body>
     <h1>C.R.I.M.的虚拟官方网站</h1>
     <h1>(该网站正在建设阶段.....)</h1>
+    <h1 style="font-size:16px;">G.R.I.M.，全球侦查与渗透海军陆战队
+      是科伦国在苏梅克委员会监视下产生的两栖作战部队，成立于1994年，隶属于科伦国海军，但是拥有自己的行动权
+      G.R.I.M.的主要任务是在情报上获得超限战上的优势与快速的消灭高危目标
+      为科伦陆军提供支援，主要部门有，情报部，突袭组，后勤部，装备包括卡莫纳地区可使用的所有装备，官方提供制式标准，其余装备自费
+      在前期卡莫纳山谷帮助多斯快速赢取敌方首级，在卡莫纳农场冲突中，靠空袭快速辅助深渊小队拿下谷物交易战
+      GRIM强调勇气与纪律，标志性口号为“保持冷静，继续前行！”，标志性语录为“众人之上，强者之列”</h1>
   </body>
 </html>
