--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>C.R.I.M.的虚拟官方网站</h1>
     <h1>(该网站正在建设阶段.....)</h1>
+    <img src="./extreme_compressed.jpg"/>
     <h1 style="font-size:16px;">G.R.I.M.，全球侦查与渗透海军陆战队<br>
       是科伦国在苏梅克委员会监视下产生的两栖作战部队，成立于1994年，隶属于科伦国海军，但是拥有自己的行动权<br>
       G.R.I.M.的主要任务是在情报上获得超限战上的优势与快速的消灭高危目标<br>
