--- a/index.html
+++ b/index.html
@@ -1,18 +1,102 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8"/>
-    <title>C.R.I.M的官方网站</title>
-  </head>
-  <body>
-    <h1>C.R.I.M.的虚拟官方网站</h1>
-    <h1>(该网站正在建设阶段.....)</h1>
-    <img src="./extreme_compressed.jpg"/>
-    <h1 style="font-size:16px;">G.R.I.M.，全球侦查与渗透海军陆战队<br>
-      是科伦国在苏梅克委员会监视下产生的两栖作战部队，成立于1994年，隶属于科伦国海军，但是拥有自己的行动权<br>
-      G.R.I.M.的主要任务是在情报上获得超限战上的优势与快速的消灭高危目标<br>
-      为科伦陆军提供支援，主要部门有，情报部，突袭组，后勤部，装备包括卡莫纳地区可使用的所有装备，官方提供制式标准，其余装备自费<br>
-      在前期卡莫纳山谷帮助多斯快速赢取敌方首级，在卡莫纳农场冲突中，靠空袭快速辅助深渊小队拿下谷物交易战<br>
-      GRIM强调勇气与纪律，标志性口号为“保持冷静，继续前行！”，标志性语录为“众人之上，强者之列”</h1>
-  </body>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>G.R.I.M. 官方网站</title>
+    <style>
+        body {
+            background-color: #0a0a0a; /* 深黑色背景 */
+            color: #d1d1d1; /* 浅灰色文字 */
+            font-family: "Microsoft YaHei", sans-serif;
+            line-height: 1.8;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container {
+            max-width: 800px;
+            width: 100%;
+            border: 1px solid #333;
+            padding: 40px;
+            background: rgba(20, 20, 20, 0.8);
+            box-shadow: 0 0 20px rgba(0,0,0,0.5);
+        }
+        h1 {
+            color: #ffffff;
+            border-bottom: 2px solid #444;
+            padding-bottom: 10px;
+            text-align: center;
+            letter-spacing: 2px;
+        }
+        .status {
+            color: #ff9800; /* 橙色表示建设中 */
+            text-align: center;
+            font-size: 0.9em;
+            margin-bottom: 30px;
+        }
+        .profile-img {
+            display: block;
+            max-width: 100%;
+            height: auto;
+            margin: 20px auto;
+            border: 1px solid #444;
+            filter: grayscale(50%); /* 增加一点严肃感 */
+        }
+        .content {
+            font-size: 16px;
+            text-align: justify;
+        }
+        .motto {
+            margin-top: 30px;
+            padding: 15px;
+            border-left: 4px solid #666;
+            background: #1a1a1a;
+            font-style: italic;
+            color: #aaa;
+        }
+        footer {
+            margin-top: 50px;
+            font-size: 12px;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h1>G.R.I.M. 官方网站</h1>
+    <div class="status">[ 正在建设阶段，权限验证中... ]</div>
+
+    <img src="./extreme_compressed.jpg" alt="G.R.I.M. Logo/Image" class="profile-img">
+
+    <div class="content">
+        <p><strong>G.R.I.M. 全球侦查与渗透海军陆战队</strong></p>
+        <p>
+            由利伦国在苏梅克委员会监督下产生的两栖作战部队，成立于1994年。
+            隶属于利伦国海军，但拥有独立的行动权。
+        </p>
+        <p>
+            <strong>主要任务：</strong> 在情报上获得超越战场上的优势与快速的消灭高价值目标。<br>
+            为利伦陆军提供支援，主要部门有：情报部，突袭组，后勤部。
+        </p>
+        <p>
+            装备包括卡奥纳地区可使用的所有装备，官方提供制式标准，其余装备自费。
+            在前期卡奥纳山曾协助多斯卡速联取敌方首级，在卡奥纳农场冲突中，靠空袭快速辅助陆战小队拿下管物交易战。
+        </p>
+    </div>
+
+    <div class="motto">
+        “保持冷静，继续前行！”<br>
+        标志性语录：保持冷静，继续前行！标志性语录为“众人之上，强者之列”
+    </div>
+</div>
+
+<footer>
+    &copy; 1994 - 2024 G.R.I.M. Operations. All Rights Reserved.
+</footer>
+
+</body>
 </html>
