--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>G.R.I.M. 官方网站</title>
     <style>
         body {
-            background-color: #0a0a0a; /* 深黑色背景 */
-            color: #d1d1d1; /* 浅灰色文字 */
+            background-color: #0a0a0a;
+            color: #d1d1d1;
             font-family: "Microsoft YaHei", sans-serif;
             line-height: 1.8;
             margin: 0;
@@ -32,7 +32,7 @@
             letter-spacing: 2px;
         }
         .status {
-            color: #ff9800; /* 橙色表示建设中 */
+            color: #ff9800;
             text-align: center;
             font-size: 0.9em;
             margin-bottom: 30px;
@@ -43,11 +43,16 @@
             height: auto;
             margin: 20px auto;
             border: 1px solid #444;
-            filter: grayscale(50%); /* 增加一点严肃感 */
+            filter: grayscale(50%);
         }
         .content {
             font-size: 16px;
             text-align: justify;
+        }
+        .location-highlight {
+            color: #fff;
+            font-weight: bold;
+            border-bottom: 1px dashed #555;
         }
         .motto {
             margin-top: 30px;
@@ -83,19 +88,19 @@
             为利伦陆军提供支援，主要部门有：情报部，突袭组，后勤部。
         </p>
         <p>
-            装备包括卡奥纳地区可使用的所有装备，官方提供制式标准，其余装备自费。
-            在前期卡奥纳山曾协助多斯卡速联取敌方首级，在卡奥纳农场冲突中，靠空袭快速辅助陆战小队拿下管物交易战。
+            装备包括<span class="location-highlight">卡莫纳</span>地区可使用的所有装备，官方提供制式标准，其余装备自费。
+            在前期<span class="location-highlight">卡莫纳山谷</span>曾协助多斯卡速联取敌方首级，在<span class="location-highlight">卡莫纳</span>农场冲突中，靠空袭快速辅助陆战小队拿下管物交易战。
         </p>
     </div>
 
     <div class="motto">
         “保持冷静，继续前行！”<br>
-        标志性语录：保持冷静，继续前行！标志性语录为“众人之上，强者之列”
+        标志性语录：“众人之上，强者之列”
     </div>
 </div>
 
 <footer>
-    &copy; 1994 - 2024 G.R.I.M. Operations. All Rights Reserved.
+    &copy; 1994 - 2026 G.R.I.M. Operations. All Rights Reserved.
 </footer>
 
 </body>
