--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-color: #0a0a0a;
             color: #d1d1d1;
-            font-family: "Microsoft YaHei", sans-serif;
+            font-family: "Courier New", "Microsoft YaHei", monospace; /* 换成了更像终端的字体 */
             line-height: 1.8;
             margin: 0;
             padding: 20px;
@@ -21,21 +21,24 @@
             width: 100%;
             border: 1px solid #333;
             padding: 40px;
-            background: rgba(20, 20, 20, 0.8);
-            box-shadow: 0 0 20px rgba(0,0,0,0.5);
+            background: rgba(20, 20, 20, 0.9);
+            box-shadow: 0 0 30px rgba(0,0,0,0.8);
+            position: relative;
         }
         h1 {
             color: #ffffff;
             border-bottom: 2px solid #444;
             padding-bottom: 10px;
             text-align: center;
-            letter-spacing: 2px;
+            letter-spacing: 4px;
+            text-transform: uppercase;
         }
         .status {
             color: #ff9800;
             text-align: center;
-            font-size: 0.9em;
+            font-size: 0.8em;
             margin-bottom: 30px;
+            text-shadow: 0 0 5px rgba(255, 152, 0, 0.5);
         }
         .profile-img {
             display: block;
@@ -43,65 +46,107 @@
             height: auto;
             margin: 20px auto;
             border: 1px solid #444;
-            filter: grayscale(50%);
+            filter: grayscale(80%) contrast(1.2);
         }
+        
+        /* --- 战术按钮样式 --- */
+        .button-group {
+            display: grid;
+            grid-template-columns: 1fr 1fr; /* 两列布局 */
+            gap: 15px;
+            margin: 30px 0;
+        }
+        .tactic-btn {
+            background: #1a1a1a;
+            border: 1px solid #444;
+            color: #aaa;
+            padding: 12px 20px;
+            font-size: 14px;
+            cursor: pointer;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
+            text-align: center;
+            outline: none;
+        }
+        .tactic-btn:hover {
+            background: #333;
+            color: #fff;
+            border-color: #ff9800; /* 悬停时变为橙色边框 */
+            box-shadow: 0 0 10px rgba(255, 152, 0, 0.3);
+        }
+        .tactic-btn:active {
+            transform: scale(0.98);
+            background: #000;
+        }
+        /* 特殊样式的红色按钮 */
+        .btn-danger {
+            border-color: #721c24;
+            color: #a94442;
+        }
+        .btn-danger:hover {
+            border-color: #ff4444;
+            color: #ff4444;
+            box-shadow: 0 0 10px rgba(255, 68, 68, 0.3);
+        }
+
         .content {
-            font-size: 16px;
+            font-size: 15px;
             text-align: justify;
         }
         .location-highlight {
-            color: #fff;
+            color: #ff9800;
             font-weight: bold;
-            border-bottom: 1px dashed #555;
         }
         .motto {
             margin-top: 30px;
             padding: 15px;
-            border-left: 4px solid #666;
-            background: #1a1a1a;
+            border-left: 4px solid #444;
+            background: #151515;
             font-style: italic;
-            color: #aaa;
+            color: #888;
         }
         footer {
             margin-top: 50px;
-            font-size: 12px;
-            color: #555;
+            font-size: 11px;
+            color: #444;
+            letter-spacing: 1px;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>G.R.I.M. 官方网站</h1>
-    <div class="status">[ 正在建设阶段，权限验证中... ]</div>
+    <h1>G.R.I.M. DATA TERMINAL</h1>
+    <div class="status">[ 权限等级：二级 | 正在检索卡莫纳档案... ]</div>
 
-    <img src="./extreme_compressed.jpg" alt="G.R.I.M. Logo/Image" class="profile-img">
+    <img src="./extreme_compressed.jpg" alt="G.R.I.M. Logo" class="profile-img">
 
     <div class="content">
         <p><strong>G.R.I.M. 全球侦查与渗透海军陆战队</strong></p>
         <p>
-            由利伦国在苏梅克委员会监督下产生的两栖作战部队，成立于1994年。
-            隶属于利伦国海军，但拥有独立的行动权。
-        </p>
-        <p>
-            <strong>主要任务：</strong> 在情报上获得超越战场上的优势与快速的消灭高价值目标。<br>
-            为利伦陆军提供支援，主要部门有：情报部，突袭组，后勤部。
-        </p>
-        <p>
-            装备包括<span class="location-highlight">卡莫纳</span>地区可使用的所有装备，官方提供制式标准，其余装备自费。
-            在前期<span class="location-highlight">卡莫纳山谷</span>曾协助多斯卡速联取敌方首级，在<span class="location-highlight">卡莫纳</span>农场冲突中，靠空袭快速辅助陆战小队拿下管物交易战。
+            由利伦国在苏梅克委员会监督下产生的两栖作战部队。
+            在<span class="location-highlight">卡莫纳</span>地区拥有极高的行动优先级。
         </p>
     </div>
 
+    <div class="button-group">
+        <button class="tactic-btn" onclick="alert('正在调取卡莫纳山谷地形图...')">任务简报</button>
+        <button class="tactic-btn" onclick="alert('进入人员名册系统...')">干员档案</button>
+        <button class="tactic-btn" onclick="alert('请求后勤部装备支援...')">装备库</button>
+        <button class="tactic-btn btn-danger" onclick="confirm('确认启动自毁程序？')">紧急撤离</button>
+    </div>
+
     <div class="motto">
-        “保持冷静，继续前行！”<br>
-        标志性语录：“众人之上，强者之列”
+        “保持冷静，继续前行。”<br>
+        —— 众人之上，强者之列
     </div>
 </div>
 
 <footer>
-    &copy; 1994 - 2026 G.R.I.M. Operations. All Rights Reserved.
+    &copy; 1994 - 2026 G.R.I.M. SECURED CONNECTION.
 </footer>
 
 </body>
+</html>
 </html>
