--- a/index.html
+++ b/index.html
@@ -1,152 +1,206 @@
+没问题，这套系统越来越完善了。既然涉及《暗区突围》的背景，我为你设计了一个多页面切换的单页系统（无需跳转多个文件，通过 JavaScript 切换显示内容，操作更顺滑）。
+
+我为你重新整合了代码，包含了：
+
+军衔制度：完整的阶梯展示。
+
+日常简报：模拟《暗区突围》风格的“暗区日报”。
+
+部门系统：情报、突击、后勤三部分。
+
+你可以直接复制这段代码替换原有的 index.html：
+
+HTML
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G.R.I.M. 官方网站</title>
+    <title>G.R.I.M. 战术终端</title>
     <style>
+        :root {
+            --primary-color: #ff9800;
+            --bg-dark: #0a0a0a;
+            --panel-bg: rgba(25, 25, 25, 0.95);
+            --border-color: #333;
+        }
+
         body {
-            background-color: #0a0a0a;
+            background-color: var(--bg-dark);
             color: #d1d1d1;
-            font-family: "Courier New", "Microsoft YaHei", monospace; /* 换成了更像终端的字体 */
-            line-height: 1.8;
+            font-family: "Courier New", "Microsoft YaHei", monospace;
             margin: 0;
             padding: 20px;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .container {
-            max-width: 800px;
-            width: 100%;
-            border: 1px solid #333;
-            padding: 40px;
-            background: rgba(20, 20, 20, 0.9);
-            box-shadow: 0 0 30px rgba(0,0,0,0.8);
-            position: relative;
-        }
-        h1 {
-            color: #ffffff;
-            border-bottom: 2px solid #444;
-            padding-bottom: 10px;
-            text-align: center;
-            letter-spacing: 4px;
-            text-transform: uppercase;
-        }
-        .status {
-            color: #ff9800;
-            text-align: center;
-            font-size: 0.8em;
-            margin-bottom: 30px;
-            text-shadow: 0 0 5px rgba(255, 152, 0, 0.5);
-        }
-        .profile-img {
-            display: block;
-            max-width: 100%;
-            height: auto;
-            margin: 20px auto;
-            border: 1px solid #444;
-            filter: grayscale(80%) contrast(1.2);
-        }
-        
-        /* --- 战术按钮样式 --- */
-        .button-group {
-            display: grid;
-            grid-template-columns: 1fr 1fr; /* 两列布局 */
-            gap: 15px;
-            margin: 30px 0;
-        }
-        .tactic-btn {
-            background: #1a1a1a;
-            border: 1px solid #444;
-            color: #aaa;
-            padding: 12px 20px;
-            font-size: 14px;
-            cursor: pointer;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            transition: all 0.3s ease;
-            text-align: center;
-            outline: none;
-        }
-        .tactic-btn:hover {
-            background: #333;
-            color: #fff;
-            border-color: #ff9800; /* 悬停时变为橙色边框 */
-            box-shadow: 0 0 10px rgba(255, 152, 0, 0.3);
-        }
-        .tactic-btn:active {
-            transform: scale(0.98);
-            background: #000;
-        }
-        /* 特殊样式的红色按钮 */
-        .btn-danger {
-            border-color: #721c24;
-            color: #a94442;
-        }
-        .btn-danger:hover {
-            border-color: #ff4444;
-            color: #ff4444;
-            box-shadow: 0 0 10px rgba(255, 68, 68, 0.3);
+            justify-content: center;
         }
 
-        .content {
-            font-size: 15px;
-            text-align: justify;
+        .terminal-container {
+            max-width: 900px;
+            width: 100%;
+            border: 1px solid var(--border-color);
+            padding: 30px;
+            background: var(--panel-bg);
+            box-shadow: 0 0 40px rgba(0,0,0,0.8);
         }
-        .location-highlight {
-            color: #ff9800;
-            font-weight: bold;
+
+        /* 导航栏 */
+        .nav-menu {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 30px;
+            border-bottom: 1px solid var(--border-color);
+            padding-bottom: 15px;
+            flex-wrap: wrap;
         }
-        .motto {
-            margin-top: 30px;
-            padding: 15px;
-            border-left: 4px solid #444;
-            background: #151515;
-            font-style: italic;
+
+        .nav-btn {
+            background: #1a1a1a;
+            border: 1px solid #444;
             color: #888;
+            padding: 8px 15px;
+            cursor: pointer;
+            font-size: 13px;
+            transition: 0.3s;
         }
-        footer {
-            margin-top: 50px;
-            font-size: 11px;
-            color: #444;
-            letter-spacing: 1px;
+
+        .nav-btn:hover, .nav-btn.active {
+            color: var(--primary-color);
+            border-color: var(--primary-color);
+            background: #222;
         }
+
+        /* 内容区控制 */
+        .page-content { display: none; animation: fadeIn 0.5s; }
+        .page-content.active { display: block; }
+
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+        /* 军衔样式 */
+        .rank-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+            gap: 10px;
+        }
+        .rank-item {
+            padding: 10px;
+            border: 1px solid #222;
+            text-align: center;
+            background: #111;
+            font-size: 13px;
+        }
+        .rank-item span { color: var(--primary-color); display: block; margin-bottom: 5px; }
+
+        /* 报纸样式 */
+        .newspaper {
+            background: #151515;
+            padding: 20px;
+            border-left: 3px solid var(--primary-color);
+            margin-bottom: 20px;
+        }
+        .news-date { font-size: 12px; color: #666; }
+        .news-title { font-size: 18px; color: #fff; margin: 10px 0; font-weight: bold; }
+
+        /* 部门按钮样式 */
+        .dept-btns { display: flex; gap: 10px; margin-top: 20px; }
+        .dept-info {
+            background: #111;
+            padding: 15px;
+            margin-top: 10px;
+            border: 1px dashed #444;
+            display: none;
+        }
+
+        h1 { text-align: center; letter-spacing: 5px; color: #fff; text-shadow: 0 0 10px rgba(255,255,255,0.1); }
+        .divider { height: 1px; background: #333; margin: 20px 0; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <h1>G.R.I.M. DATA TERMINAL</h1>
-    <div class="status">[ 权限等级：二级 | 正在检索卡莫纳档案... ]</div>
+<div class="terminal-container">
+    <h1>G.R.I.M. SYSTEM</h1>
+    <div style="text-align:center; color: #ff9800; font-size: 12px; margin-bottom: 20px;">[ 当前坐标：卡莫纳山谷 | 信号稳定 ]</div>
 
-    <img src="./extreme_compressed.jpg" alt="G.R.I.M. Logo" class="profile-img">
-
-    <div class="content">
-        <p><strong>G.R.I.M. 全球侦查与渗透海军陆战队</strong></p>
-        <p>
-            由利伦国在苏梅克委员会监督下产生的两栖作战部队。
-            在<span class="location-highlight">卡莫纳</span>地区拥有极高的行动优先级。
-        </p>
+    <div class="nav-menu">
+        <button class="nav-btn active" onclick="showPage('home')">首页</button>
+        <button class="nav-btn" onclick="showPage('ranks')">军衔制度</button>
+        <button class="nav-btn" onclick="showPage('news')">日常简报</button>
+        <button class="nav-btn" onclick="showPage('depts')">部门系统</button>
     </div>
 
-    <div class="button-group">
-        <button class="tactic-btn" onclick="alert('正在调取卡莫纳山谷地形图...')">任务简报</button>
-        <button class="tactic-btn" onclick="alert('进入人员名册系统...')">干员档案</button>
-        <button class="tactic-btn" onclick="alert('请求后勤部装备支援...')">装备库</button>
-        <button class="tactic-btn btn-danger" onclick="confirm('确认启动自毁程序？')">紧急撤离</button>
+    <div id="home" class="page-content active">
+        <img src="./extreme_compressed.jpg" alt="Logo" style="width:100%; border:1px solid #333; filter: grayscale(1);">
+        <p>这里是 G.R.I.M. 核心终端。请选择上方模块进行操作。</p>
     </div>
 
-    <div class="motto">
-        “保持冷静，继续前行。”<br>
-        —— 众人之上，强者之列
+    <div id="ranks" class="page-content">
+        <h3>等级序列 / RANK SYSTEM</h3>
+        <div class="rank-grid">
+            <div class="rank-item"><span>01</span>实习</div>
+            <div class="rank-item"><span>02</span>二等兵</div>
+            <div class="rank-item"><span>03</span>一等兵</div>
+            <div class="rank-item"><span>04</span>上等兵</div>
+            <div class="rank-item"><span>05</span>军校教官</div>
+            <div class="rank-item"><span>06</span>准尉</div>
+            <div class="rank-item"><span>07</span>下士</div>
+            <div class="rank-item"><span>08</span>中士</div>
+            <div class="rank-item"><span>09</span>上士</div>
+            <div class="rank-item"><span>10</span>军士长</div>
+            <div class="rank-item"><span>11</span>中尉</div>
+            <div class="rank-item"><span>12</span>上尉</div>
+            <div class="rank-item"><span>13</span>准将</div>
+            <div class="rank-item"><span>14</span>少将</div>
+            <div class="rank-item"><span>15</span>中将</div>
+            <div class="rank-item"><span>16</span>上将</div>
+            <div class="rank-item"><span>17</span>五星上将</div>
+        </div>
     </div>
+
+    <div id="news" class="page-content">
+        <h3>卡莫纳时报 / DAILY REPORT</h3>
+        <div class="newspaper">
+            <div class="news-date">2026.02.14 - 欧特斯战区</div>
+            <div class="news-title">北山酒店爆发大规模交火，传闻有金狮雕像流出</div>
+            <p>据前方线报，多名伪装者目击到精锐小队出没。建议所有 G.R.I.M. 干员在撤离点增派人手。</p>
+        </div>
+        <div class="newspaper">
+            <div class="news-date">2026.02.13 - 农场</div>
+            <div class="news-title">阿贾克斯部下加强巡逻：管物交易站暂时封锁</div>
+            <p>情报显示卡莫纳农场局势升级，请注意防范手榴弹覆盖式打击。</p>
+        </div>
+    </div>
+
+    <div id="depts" class="page-content">
+        <h3>组织架构 / DEPARTMENTS</h3>
+        <div class="dept-btns">
+            <button class="nav-btn" onclick="showDept('intel')">1. 情报部门</button>
+            <button class="nav-btn" onclick="showDept('assault')">2. 突击组</button>
+            <button class="nav-btn" onclick="showDept('logistics')">3. 后勤部门</button>
+        </div>
+        <div id="intel" class="dept-info"><strong>情报部门：</strong> 负责监听卡莫纳全频段通讯，分析各撤离点风险系数。</div>
+        <div id="assault" class="dept-info"><strong>突击组：</strong> 核心作战力量。精通各类武器，负责深入前线执行斩首行动。</div>
+        <div id="logistics" class="dept-info"><strong>后勤部门：</strong> 提供柯恩币兑换、改枪建议及全地形防弹衣维护。</div>
+    </div>
+
+    <div class="divider"></div>
+    <div style="font-size: 10px; color: #444; text-align: center;">SECURE LINE BY G.R.I.M. OPERATIONS</div>
 </div>
 
-<footer>
-    &copy; 1994 - 2026 G.R.I.M. SECURED CONNECTION.
-</footer>
+<script>
+    // 页面切换脚本
+    function showPage(pageId) {
+        document.querySelectorAll('.page-content').forEach(p => p.classList.remove('active'));
+        document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
+        document.getElementById(pageId).classList.add('active');
+        event.target.classList.add('active');
+    }
+
+    // 部门切换脚本
+    function showDept(deptId) {
+        document.querySelectorAll('.dept-info').forEach(d => d.style.display = 'none');
+        document.getElementById(deptId).style.display = 'block';
+    }
+</script>
 
 </body>
-</html>
 </html>
